added crud ops for parent, child and food entries with the help of BE team

--- a/gigapet/src/containers/RegisterChild/Register.css
+++ b/gigapet/src/containers/RegisterChild/Register.css
@@ -1,3 +1,9 @@
+.register-child-container {
+  display: flex;
+  background: gray;
+  flex-direction: column;
+  justify-content: flex-start;
+}
 .register-child-container > form {
   display: flex;
   flex-direction: column;
