--- a/gigapet/src/containers/Children/PickAChild.css
+++ b/gigapet/src/containers/Children/PickAChild.css
@@ -12,4 +12,29 @@
 .children-list > ul {
   list-style-type: none;
   padding: 0px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 500px;
+}
+
+.list-container {
+  padding: 10px;
+  border: 1px solid;
+  margin: 10px;
+}
+
+.list-container > li {
+  background: blue;
+  width: fit-content;
+  margin: 0 auto;
+  border-radius: 5px;
+  background: #3f51b5;
+  color: white;
+  padding: 10px;
+}
+
+.list-container > img {
+  width: 60px;
+  height: auto;
 }
