--- a/gigapet/src/containers/Children/AddChild.css
+++ b/gigapet/src/containers/Children/AddChild.css
@@ -24,3 +24,11 @@ button {
   width: 70%;
   margin: 0 auto;
 }
+
+form > fieldset > button {
+  border-radius: 10px;
+  background: #3f51b5;
+  color: white;
+  font-size: 1.1rem;
+  padding: 10px;
+}
