--- a/gigapet/src/containers/Children/Pet/Pet.css
+++ b/gigapet/src/containers/Children/Pet/Pet.css
@@ -2,3 +2,11 @@
   width: 60px;
   height: auto;
 }
+.btn-container > .pet-btn,
+button {
+  border-radius: 10px;
+  background: #3f51b5;
+  color: white;
+  font-size: 1.1rem;
+  padding: 10px;
+}
