--- a/gigapet/src/containers/Children/PickAChild.css
+++ b/gigapet/src/containers/Children/PickAChild.css
@@ -20,10 +20,24 @@
 
 .list-container {
   padding: 10px;
-  border: 1px solid;
   margin: 10px;
+  background: rgba(44, 157, 166, 0.4);
+  border-radius: 10px;
 }
 
+.list-container > .deleteButton {
+  background-color: red;
+  width: fit-content;
+  margin-left: 120px;
+  margin-top: -19px;
+  cursor: pointer;
+}
+.list-container > .petName > span {
+  background: #3f51b5;
+  padding: 5px;
+  border-radius: 5px;
+  color: white;
+}
 .list-container > li {
   background: blue;
   width: fit-content;
@@ -32,6 +46,7 @@
   background: #3f51b5;
   color: white;
   padding: 10px;
+  cursor: pointer;
 }
 
 .list-container > img {
